# Python-CI-Pipeline

./: README.md  setup.cfg
examples/: courses.json  courses.txt
project/: .gitlab-ci.yml
project/examples/: courses.md.j2
project/src/nswi177/: __init__.py  templater.py
project/tests/: common.bash  smoke.bats  test_template.py
tests/: markdown.bats  test_filters.py
