[metadata]
name = nswi177-jinja-templater
version = 0.0.1
author = Suhaila Elrefaie
author_email = elrefaeisuhaila@gmail.com
description = setup.cfg file for Jinja2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://d3s.mff.cuni.cz/teaching/nswi177/2025/project-elrefais
keywords = Jinja
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Jinja2
    markdown

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nswi177-jinja-templater = nswi177.templater:main

[options.extras_require]
dev =
    pytest
    pytest-cov
